--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,12 +30,19 @@ jobs:
       run: |
         nombre_tag=${GITHUB_REF#refs/tags/}
         echo "::set-output name=nombre_tag::$nombre_tag"
-
+        
+    - name: Revisa branches existentes
+      run: git branch -a
+      
+    - name: Hacer checkout a develop
+      run: git checkout -b develop origin/develop
+      
     - name: Crea el branch release/v-versión
       id: crear_rama_release
       run: |
         rama_release="release/$nombre_tag"
         git checkout develop
+        git checkout -b develop origin/develop
         git pull
         git checkout -b "$rama_release"
         git push origin "$rama_release"
